--- a/IliAs/res/values/strings.xml
+++ b/IliAs/res/values/strings.xml
@@ -68,5 +68,6 @@
         <string name="testpraktikum2">25.12.2012    14 Uhr</string>
         <string name="testpraktikum3">Bildverarbeitung Praktikum</string>
         <string name="kurs_abmeldung">Abmelden</string>
-    
+        <string name="test_file">Aufgabe 1.pdf</string>
+  
 </resources>
