--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,5 +69,13 @@
         <string name="testpraktikum3">Bildverarbeitung Praktikum</string>
         <string name="kurs_abmeldung">Abmelden</string>
         <string name="test_file">Aufgabe 1.pdf</string>
+        <string name="kurs_suche">Kurs:</string>
+        <string name="Dozent_suche">Dozent:</string>
+        <string name="test_seminar">Physik</string>
+        <string name="Join_kurs">Beitreten</string>
+        <string name="dozent_fassbender">"Prof. Dr. rer. nat. Faßbender "</string>
+        <string name="button_kurse">Kurse</string>
+        <string name="searching_button">Suche</string>
+        <string name="Kurs_default">Physik</string>
   
 </resources>
