--- a/IliConnect/res/values/strings.xml
+++ b/IliConnect/res/values/strings.xml
@@ -98,5 +98,6 @@
         <string name="searching_button">Suche</string>
         <string name="Kurs_default">Physik</string>
         <string name="titel">Titel</string>
+        <string name="courseName">Titel</string>
   
 </resources>
